회원가입 진행중..

--- a/src/main/resources/egovframework/message/message-common.properties
+++ b/src/main/resources/egovframework/message/message-common.properties
@@ -7,6 +7,8 @@ button.create=\ub4f1\ub85d
 button.reset=\uc7ac\uc124\uc815
 button.delete=\uc0ad\uc81c
 button.private=\ube44\ubc00\uae00
+button.login=\ub85c\uadf8\uc778
+button.join=\ud68c\uc6d0\uac00\uc785
 search.choose=\uac80\uc0c9\uc5b4 \uc120\ud0dd
 search.keyword=\uac80\uc0c9\uc5b4 \uc785\ub825
 search.name=\uc774\ub984
@@ -24,6 +26,8 @@ title.sample.edate=\uacf5\uc9c0\uc885\ub8cc\uc77c
 title.sample.noti_yn=\uacf5\uc9c0\uc5ec\ubd80
 title.sample.usr_open=\uacf5\uac1c\uc5ec\ubd80
 title.sample.fileupload=\ud30c\uc77c\uc5c5\ub85c\ub4dc
+title.sample.member_id=\uc544\uc774\ub514
+title.sample.member_pwd=\ube44\ubc00\ubc88\ud638
 
 # image name #
 image.search=btn_form_search.gif
