--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -55,7 +55,7 @@
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
     
-<!--	<login-config>
+	<login-config>
 		<auth-method>BASIC</auth-method>
 	</login-config>
     
@@ -70,6 +70,6 @@
 	<error-page>
 		<error-code>500</error-code>
 		<location>/common/error.jsp</location>
-	</error-page> -->
+	</error-page> 
     
 </web-app>
